Final projeto HTML/CSS DIO :D

--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 body {
     margin: 0;
     padding: 0;
-    color: #ffffff;
-    font-family: 'amatic sc', sans-serif;
+    color: #ffffff;    
+    background-color: #000000;
+    font-family: 'Andale Mono', monospace;	
 }
 
 /* HEADER */
@@ -12,7 +13,7 @@ body {
 .header-wrapper {
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(-45deg, #050404, #2E1C2B, #4A1942, #893168);
+    background: linear-gradient(-45deg, #000000, #383838, #2c2c2c, #383838);
     background-size: 400% 400%;
     display: flex;
     flex-direction: column;
@@ -51,8 +52,8 @@ h2 {
 }
 
 a:hover {
-    color: #2E1C2B;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: black;
 }
 
 @keyframes backgroundTransition {
@@ -91,7 +92,7 @@ a:hover {
 .checkbox .trace {
     width: 50px;
     height: 2px;
-    background-color: white;
+    background-color: whitesmoke;
     position: absolute;
     border-radius: 4px;
     transition: 0.5s ease-in-out;
@@ -126,7 +127,7 @@ a:hover {
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    box-shadow: 0px 0px 0px 0px white;
+    box-shadow: 0px 0px 0px 0px whitesmoke;
     z-index: -1;
     transition: 400ms ease-in-out 0s;
 }
@@ -141,7 +142,8 @@ a:hover {
     justify-content: center;
     align-items: center;
     z-index: 2;
-    opacity: 0;
+    opacity: 0.5;
+    background-color: #000000;
     visibility: hidden;
     transition: 400ms ease-in-out 0s;
 }
@@ -152,18 +154,18 @@ a:hover {
 
 .menu-items ul li a{
     margin: 10px 0;
-    color: #2E1C2B;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 40px;
+
 }
 
 /* ANIMAÇÃO DO MENU */
 
 #toggle:checked + .checkbox .trace:nth-child(1) {
     transform: rotate(45deg);
-    background-color: #2E1C2B;
+    background-color: #3d3d3d;
     top: 47px;
 }
 
@@ -176,7 +178,7 @@ a:hover {
 
 #toggle:checked + .checkbox .trace:nth-child(3) {
     transform: rotate(-45deg);
-    background-color: #2E1C2B;
+    background-color: #3d3d3d;
     top: 48px;
 }
 
@@ -217,7 +219,7 @@ a:hover {
     height: 300px;
     width: 400px;
     margin: 3rem 0 0 0;
-    background-image: url('./room.jpg');
+    background-image: url('hamburger.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -225,7 +227,7 @@ a:hover {
     justify-content: safe center;
     align-items: center;
     filter: grayscale(0.5);
-    color: white;
+    color: rgb(255, 255, 255);
     cursor: pointer;
     transition: 0.3s;
 }
@@ -234,7 +236,7 @@ a:hover {
     width: 40%;
     font-family: sans-serif;
     letter-spacing: 1px;
-    color: rgb(109, 109, 109);
+    color: rgb(226, 226, 226);
 }
 
 .card-wrapper {
@@ -249,8 +251,8 @@ a:hover {
 .card-wrapper::before {
     content: '';
     position: absolute;
-    height: 100px;
-    width: 100px;
+    height: 150px;
+    width: 150px;
     display: block;
     border: 1px solid white;
     opacity: 0;
@@ -263,15 +265,20 @@ a:hover {
     letter-spacing: 4px;
     margin: 0;
     transition: 0.3s;
+    color:white;
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
+
 }
 
 .card-wrapper p {
-    font-size: 0;
+    font-size: 4;
     visibility: hidden;
     opacity: 0;
-    font-weight: bold;
+    font-weight: bolder;
     text-transform: uppercase;
     transition: 0.3s;
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
+
 }
 
 .card:hover {
@@ -287,7 +294,7 @@ a:hover {
 .card:hover > .card-wrapper p {
     opacity: 1;
     visibility: visible;
-    font-size: 14px;
+    font-size: 17px;
 }
 
 /* FOOTER */
@@ -295,7 +302,7 @@ a:hover {
 .footer {
     width: 100%;
     height: 100px;
-    background-color: #2E1C2B;
+    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
